# desktop-window-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  index.js  package.json  test.js
archive/src/: window_manager_win.cpp
prebuilds/win32-x64/: desktop_window_manager.node
src/: window_manager_win.cpp
